--- a/src/components/searchBar/SearchBar.module.css
+++ b/src/components/searchBar/SearchBar.module.css
@@ -1,6 +1,7 @@
 .inputForm {
   display: flex;
   justify-content: center;
+  align-items: start;
   margin-bottom: 10px;
   background-color: #3846ad;
 }
